# KANeRF

./: .gitignore  README.md  pyproject.toml
KANeRF/: kanerf.py  kanerf_config.py  kanerf_field.py
scripts/: run.sh
